--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,22 @@
 plugins {
     id 'java'
+    id 'com.google.protobuf' version '0.8.8'
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.11.0"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.29.0'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
 }
 
 version '1.0-SNAPSHOT'
@@ -13,3 +30,4 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
